* What's new in version 4.7, PRERELEASE

* What's new in version 4.6, 2021-11-15

- SystemTap has added support for the 64-bit RISC-V architecture.

- stap-prep now tries to download the main kernel debuginfo file from
  a debuginfod server, if configured.

- Updated syscall_any tapset mapping to include newer syscalls.

- syscall_any tapset can be used by the bpf backend.

- SystemTap now uses DynInst to perform a liveness analysis on
  target variables and warn when a guru-mode modification to a variable
  will have no effect. The liveness analysis is currently done on
  x86_64, PowerPC, and AArch64.

- The kernel-user relayfs transport again sorts messages into a total
  time order across CPUs.  High output-volume scripts may need a
  larger "-s BUF" parameter to reliably transfer.  "-b" bulk mode
  is also available again as an alternative.

- abort() tapset can be used by the bpf backend.

- The bpf backend now supports foreach iteration in multi-key
  associative arrays.

* What's new in version 4.5, 2021-05-07

- Java probing support has been updated to work with the latest
  versions of the JVM and byteman (PR27739).

- An initial version of the bpf/uconversions.stp tapset provides
  tapset functions such as user_long_error() to access values in
  userspace.

- Enabled the -c option to work with the bpf backend (PR25177).

- Enum values can now be accessed as $context variables (PR25346).

- Executables for which stap has execute but not read permissions
  (--x--x--x) can now be probed with build-id probes and debuginfod.
  This allows probing some setuid programs (PR27251).

- Added VMA-tracking support to the stapdyn backend.

- Several concurrency/locking fixes and improvements were made to the
  uprobes family of probes and to the transport subsystem.  Large
  machines with hundreds of CPUs are better supported.

- The kernel runtime now uses procfs as the default namespace for
  the relayfs pseudo-files.
