@@ -1,5 +1,9 @@
 * What's new in version 4.7, PRERELEASE
 
+- target processes given with the -c/-x parameters are now always
+  added to the -d list for possible symbol/unwind data extraction,
+  for simplifying profiling invocations.  Consider --ldd.
+
 * What's new in version 4.6, 2021-11-15
 
 - SystemTap has added support for the 64-bit RISC-V architecture.
